fix users routes documentation
